# defect_detection

./: [D  [D.pub  .gitattributes  CMakeLists.txt  DataCollector.cpp  DataHandler.cpp  ResultCollector.cpp  main.cpp  mainwindow.cpp
darknet_config/: dd.cfg  dd.data
include/: DataCollector.h  DataHandler.h  DataPacket.h  ResultCollector.h  ThreadPool_MultipleFunc.hpp  ThreadPool_SingleFunc.hpp  ThreadSafeQueue.hpp  mainwindow.h
